feat: add notification by email
Adiciona notificação por email para os jogadores quando a rodada encerra