@@ -2,15 +2,15 @@ package com.reactivebingo.api.dtos.mappers;
 
 import com.reactivebingo.api.documents.Page;
 import com.reactivebingo.api.documents.RoundDocument;
-import com.reactivebingo.api.dtos.responses.PageResponseDTO;
 import com.reactivebingo.api.dtos.requests.RoundRequestDTO;
+import com.reactivebingo.api.dtos.responses.PageResponseDTO;
 import com.reactivebingo.api.dtos.responses.RoundResponseDTO;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
+import org.springframework.data.mongodb.core.aggregation.ArithmeticOperators;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring"
         , uses = {CardMapper.class, DrawnNumberMapper.class})
@@ -31,18 +31,19 @@ public interface RoundMapper {
 
     @Mapping(target = "drawnNumbers", source = "drawnNumbers", qualifiedByName = "drawnNumberDTOSet")
     @Mapping(target = "cards", source = "cards", qualifiedByName = "cardDTOSet")
-    RoundResponseDTO toPageResponse(final RoundDocument document);
+    @Named("roundToResponse")
+    RoundResponseDTO toResponse(final RoundDocument document);
+
+    @Mapping(target = "content", qualifiedByName = "roundResponseDTOList")
+    PageResponseDTO toResponse(final Page page, final Integer limit);
 
     @Named("roundResponseDTOList")
     default List<RoundResponseDTO> toRoundResponseDTOList(List<?> source) {
         return source
                 .stream()
-                .map(s -> toPageResponse((RoundDocument) s))
-                .collect(Collectors.toList());
+                .map(s -> toResponse((RoundDocument) s))
+                .toList();
     }
-
-    @Mapping(target = "content", qualifiedByName = "roundResponseDTOList")
-    PageResponseDTO toPageResponse(final Page page, final Integer limit);
 
 }
 
